; ModuleID = '/home/carl/AnghaBench/vlc/src/player/extr_player.c_vlc_player_UpdateViewpoint.c'
source_filename = "/home/carl/AnghaBench/vlc/src/player/extr_player.c_vlc_player_UpdateViewpoint.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vlc_player_input = type { i32 }
%struct.TYPE_3__ = type { i32 }

@VLC_PLAYER_WHENCE_ABSOLUTE = common dso_local global i32 0, align 4
@INPUT_CONTROL_SET_VIEWPOINT = common dso_local global i32 0, align 4
@INPUT_CONTROL_UPDATE_VIEWPOINT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @vlc_player_UpdateViewpoint(i32* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.vlc_player_input*, align 8
  %8 = alloca %struct.TYPE_3__, align 4
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  %9 = load i32*, i32** %4, align 8
  %10 = call %struct.vlc_player_input* @vlc_player_get_input_locked(i32* %9)
  store %struct.vlc_player_input* %10, %struct.vlc_player_input** %7, align 8
  %11 = load %struct.vlc_player_input*, %struct.vlc_player_input** %7, align 8
  %12 = icmp ne %struct.vlc_player_input* %11, null
  br i1 %12, label %13, label %33

13:                                               ; preds = %3
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 0
  %15 = load i32*, i32** %5, align 8
  %16 = load i32, i32* %15, align 4
  store i32 %16, i32* %14, align 4
  %17 = load i32, i32* %6, align 4
  %18 = load i32, i32* @VLC_PLAYER_WHENCE_ABSOLUTE, align 4
  %19 = icmp eq i32 %17, %18
  br i1 %19, label %20, label %26

20:                                               ; preds = %13
  %21 = load %struct.vlc_player_input*, %struct.vlc_player_input** %7, align 8
  %22 = getelementptr inbounds %struct.vlc_player_input, %struct.vlc_player_input* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = load i32, i32* @INPUT_CONTROL_SET_VIEWPOINT, align 4
  %25 = call i32 @input_ControlPush(i32 %23, i32 %24, %struct.TYPE_3__* %8)
  br label %32

26:                                               ; preds = %13
  %27 = load %struct.vlc_player_input*, %struct.vlc_player_input** %7, align 8
  %28 = getelementptr inbounds %struct.vlc_player_input, %struct.vlc_player_input* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  %30 = load i32, i32* @INPUT_CONTROL_UPDATE_VIEWPOINT, align 4
  %31 = call i32 @input_ControlPush(i32 %29, i32 %30, %struct.TYPE_3__* %8)
  br label %32

32:                                               ; preds = %26, %20
  br label %33

33:                                               ; preds = %32, %3
  ret void
}

declare dso_local %struct.vlc_player_input* @vlc_player_get_input_locked(i32*) #1

declare dso_local i32 @input_ControlPush(i32, i32, %struct.TYPE_3__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
